--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,23 +1,21 @@
 version: '3'
 services:
-  app:
+  lumen:
     image: lumen/php:7.1.27
     volumes:
       - ../app:/var/www/html
-    ports:
-      - 80:80
     environment:
       - XDEBUG_REMOTE_HOST=192.168.0.12 #You local IP
 
-  phpmyadmin:
-    image: phpmyadmin:5
-    restart: always
-    ports:
-      - 8080:80
-    environment:
-      - PMA_ARBITRARY=1
+  #phpmyadmin:
+  #  image: phpmyadmin:5
+  #  restart: always
+  #  ports:
+  #    - 8080:80
+  #  environment:
+  #    - PMA_ARBITRARY=1
 
-  mydb:
+  db:
     image: lumen/mysql:5.6.44
     command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -27,3 +25,8 @@ services:
       - ./Database/resource/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       MYSQL_ROOT_PASSWORD: example
+
+  httpd:
+    image: lumen/httpd:2.4.46
+    ports:
+      - 80:80
