--- a/docker/Httpd/conf/lumen.conf
+++ b/docker/Httpd/conf/lumen.conf
@@ -18,15 +18,15 @@
 
     # To prevent SSL Offloading
     # Set the X-Forwarded-Proto to be https for your Origin Server to understand that this request is made over HTTPS #https://httpd.apache.org/docs/2.2/mod/mod_headers.html#requestheader.
-    RequestHeader set X-Forwarded-Proto “https”
-    RequestHeader set X-Forwarded-Port “443”
+    #RequestHeader set X-Forwarded-Proto “https”
+    #RequestHeader set X-Forwarded-Port “443”
 
     ErrorLog logs/httpd-error.log
     CustomLog logs/httpd-access.log combined
 
-    ProxyPass / http://lumen:8080
-    ProxyPassReverse / http://lumen:8080
+    ProxyPass           /           http://lumen:8080
+    ProxyPassReverse    /           http://lumen:8080
 
-    ProxyPass /phpmyadmin http://phpmyadmin:9090
-    ProxyPassReverse /phpmyadmin http://phpmyadmin:9090
+    ProxyPass           /phpmyadmin/ http://phpmyadmin:8181
+    ProxyPassReverse    /phpmyadmin/ http://phpmyadmin:8181
 </VirtualHost>
