--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ../app:/var/www/html
     environment:
-      - XDEBUG_REMOTE_HOST=192.168.0.12 #You local IP
+      - XDEBUG_REMOTE_HOST=192.168.0.8 #You local IP
 
   phpmyadmin:
     image: lumen/phpmyadmin:5
@@ -17,8 +17,8 @@ services:
     environment:
       - PMA_ARBITRARY=1
 
-  db:
-    image: lumen/mysql:5.6.44
+  mydb:
+    image: lumen/mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
