Implement Photo Model

--- a/app/.env
+++ b/app/.env
@@ -19,4 +19,5 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 
-JWR_SECRET_KEY=mysecretkey
+JWT_SECRET_KEY=mysecretkey
+JWT_EXPIRATION_TIME="12 hours"
