--- a/docker/Httpd/conf/lumen.conf
+++ b/docker/Httpd/conf/lumen.conf
@@ -24,9 +24,9 @@
     ErrorLog logs/httpd-error.log
     CustomLog logs/httpd-access.log combined
 
-    ProxyPass           /           http://lumen:8080
-    ProxyPassReverse    /           http://lumen:8080
+    ProxyPass           /app            http://lumen:8080
+    ProxyPassReverse    /app            http://lumen:8080
 
-    ProxyPass           /phpmyadmin/ http://phpmyadmin:8181
-    ProxyPassReverse    /phpmyadmin/ http://phpmyadmin:8181
+    ProxyPass           /phpmyadmin     http://phpmyadmin:8181
+    ProxyPassReverse    /phpmyadmin     http://phpmyadmin:8181
 </VirtualHost>
